--- a/2.2_presco.Rmd
+++ b/2.2_presco.Rmd
@@ -147,7 +147,7 @@ cartereg <- ACM_PMI %>% slice(8,10)%>% select(1:14) %>% pivot_longer(!...1,names
 
 cartereg <- merge(regwgs,cartereg,by="INSEE_REG")
 
-leaflet(cartereg) %>%   addProviderTiles(providers$Wikimedia) %>% 
+leaflet(cartereg) %>%   addProviderTiles(providers$CartoDB.Positron) %>% 
   setView(lng = 5.1, lat = 47.27, zoom = 6) %>%
   addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5, opacity = 1) %>%
 addPolygons(weight=2,opacity = 0.9,color = "#2F4F4F", fillColor = ~pal(accueil),
@@ -302,7 +302,7 @@ cartedep <- ACM_PMI_dep %>% slice(8,10)%>% select(1,3:10) %>% pivot_longer(!...1
 
 cartedep <- merge(depwgs,cartedep,by="INSEE_DEP")
 
-leaflet(cartedep) %>% addProviderTiles(providers$Wikimedia) %>% 
+leaflet(cartedep) %>% addProviderTiles(providers$CartoDB.Positron) %>% 
   setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
     addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5, opacity = 1) %>%
     addPolygons(weight=2,opacity = 0.8,color = "#2F4F4F", fillColor = ~pal(accueil),
